# Jackify

./: CHANGELOG.md  README.md  flake.nix  pyproject.toml
jackify/: __init__.py
jackify/backend/core/: modlist_operations_configuration_cli.py
jackify/backend/handlers/: config_handler.py  filesystem_handler.py  filesystem_handler_steam.py  game_detector.py  modlist_configuration.py  modlist_detection.py  modlist_handler.py  modlist_install_cli_configuration.py  modlist_wine_ops.py  path_handler_game.py  path_handler_mo2.py  progress_parser.py  progress_parser_phase.py  protontricks_commands.py  protontricks_prefix.py  protontricks_steam.py  shortcut_creation.py  shortcut_discovery.py  shortcut_vdf_management.py  subprocess_utils.py  ttw_installer_backend.py  wabbajack_parser.py  wine_utils_config.py  wine_utils_proton.py  winetricks_env.py
jackify/backend/models/: modlist.py
jackify/backend/services/: automated_prefix_game_utils.py  automated_prefix_proton.py  automated_prefix_registry.py  automated_prefix_shortcuts.py  automated_prefix_workflow.py  file_validator_service.py  manual_download_manager.py  manual_download_manager_runtime_mixin.py  modlist_gallery_service.py  modlist_service.py  modlist_service_installation.py  nexus_auth_service.py  nexus_premium_service.py  steam_restart_service.py  steamgriddb_service.py  tool_config_service.py  tool_registry.py  update_service.py
jackify/engine/: jackify-engine  jackify-engine.deps.json  jackify-engine.runtimeconfig.json
jackify/frontends/cli/: __main__.py  (+1 more)
jackify/shared/: errors.py  logging.py  paths.py
(+48 files in other folders)
