[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jackify"
version = "0.6.0.1"
description = "Wabbajack modlist installer for Linux"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "psutil>=5.8.0",
    "requests>=2.25.0",
    "tqdm>=4.65.0",
    "pycryptodome>=3.19.0",
    "PyYAML>=6.0",
    "vdf",
    "packaging>=21.0",
    "watchdog>=3.0.0",
]

[project.scripts]
jackify     = "jackify.__main__:main"
jackify-cli = "jackify.frontends.cli.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["jackify*"]
